--- a/index.html
+++ b/index.html
@@ -18,10 +18,6 @@
                 <h1>DOST AI</h1>
             </div>
             <p class="tagline">Разработка, автоматизация и AI-решения</p>
-            <div class="author-info">
-                <p class="author-name">Илькин Тагиев</p>
-                <p class="author-role">AI-продюсер</p>
-            </div>
             <button class="cta-button" onclick="showServices()">
                 Посмотреть услуги
                 <span class="arrow">→</span>
@@ -255,14 +251,14 @@
         <div class="contact-container">
             <div class="contact-info">
                 <div class="contact-avatar">
-                    <div class="avatar-circle">ИТ</div>
+                    <div class="avatar-circle">🤖</div>
                 </div>
-                <h3>Илькин Тагиев</h3>
-                <p class="contact-role">AI-продюсер компании DOST AI</p>
+                <h3>DOST AI</h3>
+                <p class="contact-role">Автоматизация и AI-решения</p>
 
-                <a href="https://t.me/boss_dostai" class="telegram-link" target="_blank">
+                <a href="https://t.me/dostai_grup" class="telegram-link" target="_blank">
                     <span class="tg-icon">✈️</span>
-                    @boss_dostai
+                    @dostai_grup
                 </a>
             </div>
 
